--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,9 @@
-<main class="main">
-  <div class="content">
-    <div
-      class="rounded-lg bg-white px-6 py-8 shadow-xl ring ring-gray-900/5 dark:bg-gray-800"
-    >
-      <div>
-        <span
-          class="inline-flex items-center justify-center rounded-md bg-indigo-500 p-2 shadow-lg"
-        >
-          <svg
-            class="h-6 w-6 text-white"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            aria-hidden="true"
-          >
-            <!-- ... -->
-          </svg>
-        </span>
-      </div>
-      <h3
-        class="mt-5 text-base font-medium tracking-tight text-gray-900 dark:text-white"
-      >
-        Writes upside-down
-      </h3>
-      <p class="mt-2 text-sm text-gray-500 dark:text-gray-400">
-        The Zero Gravity Pen can be used to write in any orientation, including
-        upside-down. It even works in outer space.
-      </p>
+<div class="min-h-full">
+  <app-nav></app-nav>
+  <app-header></app-header>
+  <main>
+    <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+      <router-outlet />
     </div>
-  </div>
-</main>
-
-<router-outlet />
+  </main>
+</div>
