--- a/src/app/layout/components/nav/nav.component.html
+++ b/src/app/layout/components/nav/nav.component.html
@@ -75,6 +75,7 @@
                 id="user-menu-button"
                 aria-expanded="false"
                 aria-haspopup="true"
+                (click)="menuToggle()"
               >
                 <span class="absolute -inset-1.5"></span>
                 <span class="sr-only">Open user menu</span>
@@ -86,22 +87,13 @@
               </button>
             </div>
 
-            <!--
-                Dropdown menu, show/hide based on menu state.
-
-                Entering: "transition ease-out duration-100"
-                  From: "transform opacity-0 scale-95"
-                  To: "transform opacity-100 scale-100"
-                Leaving: "transition ease-in duration-75"
-                  From: "transform opacity-100 scale-100"
-                  To: "transform opacity-0 scale-95"
-              -->
             <div
               class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-hidden"
               role="menu"
               aria-orientation="vertical"
               aria-labelledby="user-menu-button"
               tabindex="-1"
+              [class.hidden]="!isMenuOpen()"
             >
               <!-- Active: "bg-gray-100 outline-hidden", Not Active: "" -->
               <a
@@ -139,6 +131,7 @@
           class="relative inline-flex items-center justify-center rounded-md bg-gray-800 p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800 focus:outline-hidden"
           aria-controls="mobile-menu"
           aria-expanded="false"
+          (click)="menuToggle()"
         >
           <span class="absolute -inset-0.5"></span>
           <span class="sr-only">Open main menu</span>
@@ -180,7 +173,7 @@
   </div>
 
   <!-- Mobile menu, show/hide based on menu state. -->
-  <div class="md:hidden" id="mobile-menu">
+  <div class="md:hidden" id="mobile-menu" [class.hidden]="!isMenuOpen()">
     <div class="space-y-1 px-2 pt-2 pb-3 sm:px-3">
       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
       <a
