--- a/src/app/layout/components/nav/nav.component.html
+++ b/src/app/layout/components/nav/nav.component.html
@@ -43,6 +43,8 @@
       </div>
       <div class="hidden md:block">
         <div class="ml-4 flex items-center md:ml-6">
+          <app-theme-button class="mr-3"></app-theme-button>
+
           <button
             type="button"
             class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800 focus:outline-hidden"
