--- a/src/app/shared/components/theme-button/theme-button.component.html
+++ b/src/app/shared/components/theme-button/theme-button.component.html
@@ -1,10 +1,13 @@
-<div class="inline-flex rounded-md shadow-xs" role="group">
-  <button
-    type="button"
-    class="inline-flex items-center rounded-s-lg border border-gray-900 bg-transparent px-4 py-2 text-sm font-medium text-gray-900 hover:bg-gray-900 hover:text-white focus:z-10 focus:bg-gray-900 focus:text-white focus:ring-2 focus:ring-gray-500 dark:border-white dark:text-white dark:hover:bg-gray-700 dark:hover:text-white dark:focus:bg-gray-700"
-  >
-    <svg
-      class="h-5 w-5"
+<button
+  type="button"
+  class="inline-flex items-center rounded-lg border border-gray-900 bg-transparent px-4 py-2 text-sm font-medium text-gray-900 hover:bg-gray-900 hover:text-white focus:z-10 focus:bg-gray-900 focus:text-white focus:ring-2 focus:ring-gray-500 dark:border-white dark:text-white dark:hover:bg-gray-700 dark:hover:text-white dark:focus:bg-gray-700"
+  (click)="toggleTheme()"
+  [attr.aria-label]="'Toggle ' + (isDarkTheme ? 'light' : 'dark') + ' mode'"
+  [attr.title]="'Toggle ' + (isDarkTheme ? 'light' : 'dark') + ' mode'"
+>
+  <ng-container *ngIf="isDarkTheme"
+    ><svg
+      class="me-2 h-5 w-5"
       fill="currentColor"
       viewBox="0 0 20 20"
       xmlns="http://www.w3.org/2000/svg"
@@ -13,15 +16,11 @@
         d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
       ></path>
     </svg>
-    Dark
-  </button>
-
-  <button
-    type="button"
-    class="inline-flex items-center rounded-e-lg border border-gray-900 bg-transparent px-4 py-2 text-sm font-medium text-gray-900 hover:bg-gray-900 hover:text-white focus:z-10 focus:bg-gray-900 focus:text-white focus:ring-2 focus:ring-gray-500 dark:border-white dark:text-white dark:hover:bg-gray-700 dark:hover:text-white dark:focus:bg-gray-700"
+    Dark</ng-container
   >
-    <svg
-      class="h-5 w-5"
+  <ng-container *ngIf="!isDarkTheme"
+    ><svg
+      class="me-2 h-5 w-5"
       fill="currentColor"
       viewBox="0 0 20 20"
       xmlns="http://www.w3.org/2000/svg"
@@ -32,6 +31,6 @@
         clip-rule="evenodd"
       ></path>
     </svg>
-    Light
-  </button>
-</div>
+    Light</ng-container
+  >
+</button>
