--- a/src/app/features/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/components/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
     *ngIf="store.mouses().length > 0 && !store.isLoading() && !store.error()"
   >
     <h1
-      class="mb-4 bg-gradient-to-r from-sky-400 to-emerald-600 bg-clip-text text-3xl font-extrabold text-gray-900 text-transparent"
+      class="mb-4 bg-gradient-to-r from-purple-600 to-blue-500 bg-clip-text text-3xl font-extrabold font-medium text-transparent hover:bg-gradient-to-bl"
     >
       <span>Mouses ({{ store.mousesCount() }})</span>
     </h1>
@@ -36,7 +36,7 @@
   [disabled]="store.isLoading()"
   (click)="store.loadMouses()"
   type="button"
-  class="me-2 inline-flex items-center rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-900 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:text-blue-700 focus:ring-2 focus:ring-blue-700 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+  class="me-2 mb-2 rounded-lg bg-gradient-to-br from-purple-600 to-blue-500 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-gradient-to-bl focus:ring-4 focus:ring-blue-300 focus:outline-none dark:focus:ring-blue-800"
 >
   <ng-container *ngIf="!store.isLoading()"> Load Mouses </ng-container>
   <ng-container *ngIf="store.isLoading()">
@@ -65,7 +65,7 @@
   [disabled]="store.isLoading()"
   (click)="store.addMouse()"
   type="button"
-  class="me-2 inline-flex items-center rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-900 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:text-blue-700 focus:ring-2 focus:ring-blue-700 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+  class="me-2 mb-2 rounded-lg bg-gradient-to-br from-purple-600 to-blue-500 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-gradient-to-bl focus:ring-4 focus:ring-blue-300 focus:outline-none dark:focus:ring-blue-800"
 >
   <ng-container *ngIf="!store.isLoading()"> Add Mouse </ng-container>
   <ng-container *ngIf="store.isLoading()">
