--- a/src/app/features/dashboard/components/mouse/mouse.component.html
+++ b/src/app/features/dashboard/components/mouse/mouse.component.html
@@ -12,12 +12,17 @@
       {{ mouse.description }}
     </p>
   </blockquote>
+
   <button
     type="button"
-    class="me-2 mb-2 rounded-lg border border-blue-700 px-5 py-2.5 text-center text-sm font-medium text-blue-700 hover:bg-blue-800 hover:text-white focus:ring-4 focus:ring-blue-300 focus:outline-none dark:border-blue-500 dark:text-blue-500 dark:hover:bg-blue-500 dark:hover:text-white dark:focus:ring-blue-800"
+    class="group relative me-2 mb-2 inline-flex items-center justify-center overflow-hidden rounded-lg bg-gradient-to-br from-purple-600 to-blue-500 p-0.5 text-sm font-medium text-gray-900 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white focus:ring-4 focus:ring-blue-300 focus:outline-none dark:text-white dark:focus:ring-blue-800"
     [disabled]="isLoading"
     (click)="deleteMouse(mouse.id)"
   >
-    Remove Mouse
+    <span
+      class="relative rounded-md bg-white px-5 py-2.5 transition-all duration-75 ease-in group-hover:bg-transparent dark:bg-gray-900 group-hover:dark:bg-transparent"
+    >
+      Remove Mouse
+    </span>
   </button>
 </figure>
