--- a/src/app/features/dashboard/components/mouse/mouse.component.html
+++ b/src/app/features/dashboard/components/mouse/mouse.component.html
@@ -2,6 +2,7 @@
   *ngIf="mouse"
   class="flex flex-col items-center justify-center rounded-t-lg border-b border-gray-200 bg-white p-8 text-center md:rounded-ss-lg md:rounded-t-none md:border-e dark:border-gray-700 dark:bg-gray-800"
 >
+  <img class="rounded-t-lg" src="{{ mouse.image }}" alt="{{ mouse.title }}" />
   <blockquote
     class="mx-auto mb-4 max-w-2xl text-gray-500 lg:mb-8 dark:text-gray-400"
   >
