--- a/src/app/shared/components/theme-button/theme-button.component.html
+++ b/src/app/shared/components/theme-button/theme-button.component.html
@@ -1,6 +1,6 @@
 <button
   type="button"
-  class="inline-flex items-center rounded-lg border border-gray-900 bg-transparent px-4 py-2 text-sm font-medium text-gray-900 hover:bg-gray-900 hover:text-white focus:z-10 focus:bg-gray-900 focus:text-white focus:ring-2 focus:ring-gray-500 dark:border-white dark:text-white dark:hover:bg-gray-700 dark:hover:text-white dark:focus:bg-gray-700"
+  class="inline-flex items-center rounded-lg border border-gray-900 border-white bg-transparent px-4 py-2 text-sm font-medium text-white hover:bg-gray-900 hover:text-white focus:z-10 focus:bg-gray-700 focus:text-white focus:ring-2 focus:ring-gray-500 dark:text-gray-900 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white"
   (click)="toggleTheme()"
   [attr.aria-label]="'Toggle ' + (isDarkTheme ? 'light' : 'dark') + ' mode'"
   [attr.title]="'Toggle ' + (isDarkTheme ? 'light' : 'dark') + ' mode'"
@@ -20,7 +20,7 @@
   >
   <ng-container *ngIf="!isDarkTheme"
     ><svg
-      class="me-2 h-5 w-5"
+      class="h-5 w-5"
       fill="currentColor"
       viewBox="0 0 20 20"
       xmlns="http://www.w3.org/2000/svg"
