--- a/src/app/layout/components/nav/nav.component.html
+++ b/src/app/layout/components/nav/nav.component.html
@@ -13,30 +13,24 @@
           <div class="ml-10 flex items-baseline space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
             <a
-              href="#"
-              class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white"
+              routerLink="/"
+              [routerLinkActiveOptions]="{ exact: true }"
+              routerLinkActive="bg-gray-900 text-white"
+              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
               aria-current="page"
               >Dashboard</a
             >
             <a
-              href="#"
+              routerLink="/team"
+              routerLinkActive="bg-gray-900 text-white"
               class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
               >Team</a
             >
             <a
-              href="#"
+              routerLink="/project"
+              routerLinkActive="bg-gray-900 text-white"
               class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
-              >Projects</a
-            >
-            <a
-              href="#"
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
-              >Calendar</a
-            >
-            <a
-              href="#"
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white"
-              >Reports</a
+              >Project</a
             >
           </div>
         </div>
