--- a/src/app/features/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/components/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
       class="mb-8 grid rounded-lg border border-gray-200 bg-white shadow-xs sm:grid-cols-2 md:mb-12 md:grid-cols-3 dark:border-gray-700 dark:bg-gray-800"
     >
       <app-mouse
-        *ngFor="let mouse of store.mouses()"
+        *ngFor="let mouse of store.mouses(); trackBy: identify"
         [mouse]="mouse"
         [isLoading]="store.isLoading()"
         (removeMouse)="removeMouse($event)"
