--- a/src/app/features/dashboard/components/mouse/mouse.component.html
+++ b/src/app/features/dashboard/components/mouse/mouse.component.html
@@ -1,7 +1,6 @@
-<a
+<figure
   *ngIf="mouse"
   class="flex flex-col items-center justify-center rounded-t-lg border-b border-gray-200 bg-white p-8 text-center md:rounded-ss-lg md:rounded-t-none md:border-e dark:border-gray-700 dark:bg-gray-800"
-  routerLink="/mouse/{{ mouse.id }}"
 >
   <img class="rounded-t-lg" src="{{ mouse.image }}" alt="{{ mouse.title }}" />
   <blockquote
@@ -15,6 +14,17 @@
     </p>
   </blockquote>
 
+  <a
+    routerLink="/mouse/{{ mouse.id }}"
+    type="button"
+    class="group relative me-2 mb-2 inline-flex items-center justify-center overflow-hidden rounded-lg bg-gradient-to-br from-purple-600 to-blue-500 p-0.5 text-sm font-medium text-gray-900 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white focus:ring-4 focus:ring-blue-300 focus:outline-none dark:text-white dark:focus:ring-blue-800"
+  >
+    <span
+      class="relative rounded-md bg-white px-5 py-2.5 transition-all duration-75 ease-in group-hover:bg-transparent dark:bg-gray-900 group-hover:dark:bg-transparent"
+    >
+      Open Details
+    </span>
+  </a>
   <button
     type="button"
     class="group relative me-2 mb-2 inline-flex items-center justify-center overflow-hidden rounded-lg bg-gradient-to-br from-purple-600 to-blue-500 p-0.5 text-sm font-medium text-gray-900 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white focus:ring-4 focus:ring-blue-300 focus:outline-none dark:text-white dark:focus:ring-blue-800"
@@ -27,4 +37,4 @@
       Remove Mouse
     </span>
   </button>
-</a>
+</figure>
