Add Signal Events

--- a/src/app/features/dashboard/components/mouse-details/mouse-details.component.html
+++ b/src/app/features/dashboard/components/mouse-details/mouse-details.component.html
@@ -15,7 +15,7 @@
     </h5>
     <div class="flex items-center justify-between">
       <span class="text-3xl font-bold text-gray-900 dark:text-white">{{
-        mouse.price
+        mouse.price | currency
       }}</span>
       <button
         type="button"
