--- a/src/app/features/project/components/project/project.component.html
+++ b/src/app/features/project/components/project/project.component.html
@@ -1,1 +1,47 @@
-<p>project works!</p>
+<div
+  class="mb-8 grid gap-5 rounded-lg border border-gray-200 bg-white shadow-xs md:mb-12 md:grid-cols-2 dark:border-gray-700 dark:bg-gray-800"
+>
+  <div
+    *ngFor="let project of store.projects(); trackBy: identify"
+    class="w-full max-w-md rounded-lg border border-gray-200 bg-white p-4 shadow-sm sm:p-8 dark:border-gray-700 dark:bg-gray-800"
+  >
+    <div class="mb-4 flex items-center justify-between">
+      <h5 class="text-xl leading-none font-bold text-gray-900 dark:text-white">
+        {{ project.name }}
+      </h5>
+    </div>
+    <div class="flow-root">
+      <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+        <li
+          *ngFor="let mouse of project.mouses; trackBy: identify"
+          class="py-3 sm:py-4"
+        >
+          <div class="flex items-center">
+            <div class="shrink-0">
+              <img
+                class="h-8 w-8 rounded-full"
+                src="{{ mouse.image }}"
+                alt="Neil image"
+              />
+            </div>
+            <div class="ms-4 min-w-0 flex-1">
+              <p
+                class="truncate text-sm font-medium text-gray-900 dark:text-white"
+              >
+                {{ mouse.title }}
+              </p>
+              <p class="truncate text-sm text-gray-500 dark:text-gray-400">
+                {{ mouse.description }}
+              </p>
+            </div>
+            <div
+              class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white"
+            >
+              {{ mouse.price | currency }}
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
